style: reformat code to fix checkstyle violations
This is IDEA's autoformat + manual formatting for the following cases:
1) s/\+\n/\n+/ to make sure line wraps before + operator. The same for other binary operators
2) if (...) /* comment */ {} -> if (...) { /* comment */
3) int a, b; -> int a; int b;